# escriba

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPROVEMENTS.md  MARKETING_IDEAS.md  Makefile  NOTION_AI_ANALYSIS.md  README.md  ROADMAP.md  escriba.toml  escriba.toml.example  install.sh  local-transcriber.toml  local-transcriber.toml.example  pyproject.toml  setup_app.py
.cursor/rules/: project-standards.mdc
.github/workflows/: build-swift-cli.yml
.metate/: plan.md  profile.yml
docs/review/: v0.4.0-review-findings.md
resources/: Escriba.icns
scripts/: build_app.sh  generate_icon.py
src/escriba/: __init__.py  cli.py  config.py
src/escriba/app/: database.py  formats.py  menubar.py  observability.py  server.py  session.py
src/escriba/audio/: call_detection.py  call_state.py  device_detection.py  live_capture.py  mic_monitor.py  screen_capture.py
src/local_transcriber/: cli.py  config.py
swift-audio-capture/: Info.plist  Package.swift  README.md  test_integration.py
tests/: __init__.py  conftest.py  test_audio_mixing.py  test_backend_fallback.py  test_call_state.py  test_cli_typer.py  test_config_toml.py  test_database.py  test_device_detection.py  test_export.py  test_formats.py  test_knowledge_adapters.py  test_llm_provider.py  test_notepad.py  test_server.py  test_session.py  test_spa.py  test_streaming_mlx.py  test_streaming_transcriber.py  test_t1_subprocess_inference.py  test_t2_observability.py  test_t3_config_validation.py  test_t4_model_probe.py  test_vad_config.py  test_wav_creation.py
(+68 files in other folders)
